moved SandSimulation to external class

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,8 @@
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = majicdesigns/MD_MAX72XX@^3.3.0
-           SPI
+lib_deps = 
+	majicdesigns/MD_MAX72XX@^3.3.0
+	SPI
+	smougenot/TM1637@0.0.0-alpha+sha.9486982048
+	paulstoffregen/Encoder@^1.4.1
