switched rotary encoder lib, added interrupts and interrupt locks

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ lib_deps =
 	majicdesigns/MD_MAX72XX@^3.3.0
 	SPI
 	smougenot/TM1637@0.0.0-alpha+sha.9486982048
-	paulstoffregen/Encoder@^1.4.1
+	mathertel/RotaryEncoder@^1.5.2
