--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+[env:nanoatmega328new]
 platform = atmelavr
-board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 lib_deps = 
 	majicdesigns/MD_MAX72XX@^3.3.0
