added melody feature

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	SPI
 	smougenot/TM1637@0.0.0-alpha+sha.9486982048
 	mathertel/RotaryEncoder@^1.5.2
+	arduinogetstarted/ezBuzzer@^1.0.0
