creates environments for Arduinos with both old and new bootloaders

--- a/arduino/platformio.ini
+++ b/arduino/platformio.ini
@@ -8,13 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+[env]
 platform = atmelavr
-board = nanoatmega328
 framework = arduino
+
 lib_deps = 
 	majicdesigns/MD_MAX72XX@^3.3.0
 	SPI
 	smougenot/TM1637@0.0.0-alpha+sha.9486982048
 	mathertel/RotaryEncoder@^1.5.2
 	arduinogetstarted/ezBuzzer@^1.0.0
+
+check_tool = clangtidy
+
+[env:nanoatmega328]
+board = nanoatmega328
+
+[env:nanoatmega328new]
+board = nanoatmega328new
